	request.
	(twittering-get-and-render-timeline): update the information of
	the last request instead of `twittering-get-twits'.
	(twittering-current-timeline): replace `twittering-get-twits' by
	`twittering-get-and-render-timeline'.
	(twittering-erase-old-statuses): replace `twittering-get-twits' by
	`twittering-get-and-render-timeline'.

2010-01-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el, test/test-twittering-mode.el: rebase the
	`timeline-spec' branch. The new timeline spec based on
	S-expression is introduced.

	* twittering-mode.el (twittering-timeline-spec-to-string): add.
	(twittering-extract-timeline-spec): add.
	(twittering-string-to-timeline-spec): add.
	(twittering-timeline-spec-singlep): add.
	(twittering-timeline-spec-to-host-method): add.
	(twittering-host-method-to-timeline-spec): add.
	(twittering-last-timeline-spec): add.
	(twittering-last-timeline-spec-string)
	(twittering-add-timeline-history): modified for new timeline spec.
	(twittering-update-mode-line): modified for new timeline spec.
	(twittering-get-twits-with-timeline-spec): modified for new
	timeline spec.
	(twittering-read-timeline-spec-string-with-completion): add.
	(twittering-read-timeline-spec-with-completion): modified for new
	timeline spec.
	(twittering-get-timeline, twittering-get-list): replaced with
	`twittering-get-twits-with-timeline-spec'.
	(twittering-get-and-render-timeline): renamed from
	`twittering-get-twits-with-timeline-spec'.

	* test/test-twittering-mode.el (timeline-spec): add tests for new
	timeline spec.

2010-01-02  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-use-show-minibuffer-length): New
	defvar to enable/disable a function which is show the number of
	charactors in minibuffer.
	(twittering-update-status-from-minibuffer): Refer it to add/remove
	hooks.

2009-12-30  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/server.rb: add. Twitter API and Proxy mock server
